plugins {
    id 'java'
    id 'org.jetbrains.intellij.platform' version '2.10.1'
}

repositories {
    mavenCentral()

    intellijPlatform {
        defaultRepositories()
    }
}

dependencies {
    implementation(project(":utils"))
    intellijPlatform {
        intellijIdeaCommunity('2025.2')
        bundledPlugin("com.intellij.java")
    }
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
